# machine_learning_ravet_weekend

./: README.md  main.py  pyproject.toml  requirements.txt  test.ipynb  utils.py
01 Simple Linear Regression/: SLR.ipynb
02 Multiple Linear Regression/: MLR.ipynb
03 Feature Engineering/: FeatureEngg.ipynb  model.joblib  ohe.joblib  scaler.joblib
04 Automated Preprocessing/: model.joblib  pipelines.ipynb  pre.joblib
05 Feature Selection/: Backward.ipynb  Forward.ipynb  backward_model.joblib  backward_pre.joblib  forward_model.joblib  forward_pre.joblib
06 Regularization/: Regularization.ipynb  RidgeResults.csv  pre.joblib  ridge.joblib
07 Regression Project/: house_price_model.joblib  pre.joblib  project.ipynb
08 Logistic Regression/: Results.csv  iris_model.joblib  logistic.ipynb  pre.joblib
09 Decision Tree Classification/: DTC.ipynb  drugs_model.joblib  pre.joblib
10 Decision Tree Regression/: DTR.ipynb  DTR_Results.csv  dtr_model.joblib  pre.joblib
10 Ensemble Technique/: ensemble.ipynb
11 Ensemble Technique/: pre.joblib  xgb_model.joblib
12 SVM and KNN/: SVM_KNN.ipynb  pre.joblib  svc.joblib  svc_results.csv
13 Algorithm Evaluation/: algo_eval.ipynb  loan_model.joblib  loan_results.csv
14 Clustering/: clustering1.ipynb
15 Classification Project/: evaluation.csv  machine.ipynb  machine_model.joblib  pre.joblib  results.csv
