[project]
name = "machine-learnning-ravet-weekend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.5.0",
    "jupyter>=1.1.1",
    "kneed>=0.8.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyforest>=1.1.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.1",
    "statsmodels>=0.14.4",
    "xgboost>=3.0.2",
]
